--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,15 @@
     box-sizing: border-box;
 }
 
-.container{
-    /* position: relative; */
+.container, .suba{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* margin: 0 10rem; */
-    gap: 5rem;
+    gap: 0 5rem;
+}
+
+.suba{
+    margin-top: -11rem;
 }
 
 .descricao{
@@ -38,7 +40,7 @@ h1.titulo{
 .background{
     position: fixed;
     z-index: -1;
-    opacity: .5;
+    opacity: .4;
 }
 
 img.title{
@@ -46,10 +48,15 @@ img.title{
     height: auto;
 }
 
-/* GRID AUTORES */
-.grid{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr);
+/* "GRID" AUTORES */
+.row{
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    margin-top: -10rem;
+}
+
+.ryane{
+    padding-top: 3rem;
 }
