terminar em casa

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,9 @@ img.title{
     align-items: center;
     justify-content: space-around;
     margin-top: -10rem;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .ryane{
