--- a/assets/css/autores.css
+++ b/assets/css/autores.css
@@ -275,6 +275,7 @@ figcaption {
 .js-slider_nav_item {
     position: absolute;
     display: none;
+    align-items: center;
     width: 4rem;
     height: 4rem;
     border: 1px solid #736055;
