--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Rochester&display=swap');
 /* Rochester */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.container, .suba{
+.container,
+.suba {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 0 5rem;
 }
 
-.suba{
-    margin-top: -11rem;
+.suba {
+    margin-top: -11vh;
 }
 
-.descricao{
+.container .descricao{
     justify-content: center;
     align-items: center;
     align-self: center;
     max-width: 800px;
 }
 
-p.texto{
+p.texto {
     font-weight: lighter;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
 }
 
-h1.titulo{
+h1.titulo {
     font-weight: lighter;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 40px;
 }
 
-.background{
+.background {
     position: fixed;
     z-index: -1;
     opacity: .4;
 }
 
-img.title{
+img.title {
     width: 40vw;
     height: auto;
 }
 
 /* "GRID" AUTORES */
-.row{
+.row {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -60,6 +61,30 @@ img.title{
     flex-wrap: wrap;
 }
 
-.ryane{
+.ryane {
     padding-top: 3rem;
+}
+
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
 }
