--- a/assets/css/autores.css
+++ b/assets/css/autores.css
@@ -33,7 +33,7 @@
 }
 
 .nome_autor {
-    max-width: 500px;
+    max-width: 50vh;
     max-height: 40vh;
 }
 
@@ -275,7 +275,7 @@ figcaption {
 .js-slider_nav_item {
     position: absolute;
     display: none;
-        width: 4rem;
+    width: 4rem;
     height: 4rem;
     border: 1px solid #736055;
     border-radius: 50%;
@@ -346,9 +346,9 @@ figcaption {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 1rem;
+    width: .75rem;
+    height: .75rem;
+    border-radius: .75rem;
     background: #736055;
     transform: translate3d(-50%, -50%, 0);
 }
@@ -362,4 +362,114 @@ figcaption {
 #s-2:checked~.js-slider .js-slider_indicator .indi-2:after,
 #s-3:checked~.js-slider .js-slider_indicator .indi-3:after {
     transform: translate3d(-50%, -50%, 0) scale(2.5);
+}
+
+@media (max-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+
+    p.texto{font-size: 20px;}
+
+    h1.titulo{font-size: 30px;}
+
+    .descricao{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0 20px;
+    }
+
+    .header .row{
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+        margin-top: 40px;
+    }
+
+    .row{
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+
+    .header .row img, .header .row a.logo img{
+        max-width: 30vw;
+        height: auto;
+    }
+
+    .header .row{
+        flex-direction: row;
+        max-width: 100vw;
+        justify-content: space-around;
+    }
+
+    .nome_autor, .nome-r{
+        padding-right: 10px;
+    }
+
+    img.nome_autor{
+        width: 40vw;
+        height: auto;
+    }
+    
+    .text{
+        font-weight: normal;
+        font-size: 1rem;
+        width: 90vw;
+        height: auto;
+        gap: 20px;
+        text-align: start;
+        margin:2rem 7rem;
+    }
+
+    .foto_autor{
+        display: none;
+    }
+
+    .menu, .menu nav ul, .menu li, .menu a{
+        max-width: 100vw;
+        font-size: 1rem;
+        flex-direction: row;
+        padding: 0;
+        gap: 10vw;
+    }
+
+    .void{
+        min-width: 40vw;
+    }
+
+    .img img{
+        min-width: 80vw;
+    }
+
+    .js-slider_nav_item {
+        width: 3rem;
+        height: 3rem;
+    }
+
+    .js-slider_nav_item:after {
+        width: 1rem;
+        height: 1px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (max-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
 }
